components/manifests/overlays/hcmais/ambient-ui-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ambient-ui
spec:
  host: ambient-ui-ambient-api.apps.rosa.hcmais01ue1.s9m2.p3.openshiftapps.com
  to:
    kind: Service
    name: ambient-ui-service
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
