components/manifests/overlays/hcmais/api-server-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ambient-api-server
spec:
  host: ambient-api-server-ambient-api.apps.rosa.hcmais01ue1.s9m2.p3.openshiftapps.com
  to:
    kind: Service
    name: ambient-api-server
  port:
    targetPort: api
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
